// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Group> rendering should match snapshot 1`] = `
<div>
  <Stack
    alignItems="stretch"
    scale="m"
  >
    <WithMouseOverState(RadioOption)
      isChecked={false}
      isDisabled={false}
      key=".0"
      name="bar"
      onChange={[MockFunction]}
      value="foo"
    >
      foo
    </WithMouseOverState(RadioOption)>
    <WithMouseOverState(RadioOption)
      isChecked={false}
      isDisabled={false}
      key=".1"
      name="bar"
      onChange={[MockFunction]}
      value="foo"
    >
      bar
    </WithMouseOverState(RadioOption)>
  </Stack>
</div>
`;

exports[`<Group> rendering when \`direction is \`inline\`\` should match snapshot 1`] = `
<div>
  <Inline
    alignItems="flexStart"
    scale="m"
  >
    <WithMouseOverState(RadioOption)
      isChecked={false}
      isDisabled={false}
      key=".0"
      name="bar"
      onChange={[MockFunction]}
      value="foo"
    >
      foo
    </WithMouseOverState(RadioOption)>
    <WithMouseOverState(RadioOption)
      isChecked={false}
      isDisabled={false}
      key=".1"
      name="bar"
      onChange={[MockFunction]}
      value="foo"
    >
      bar
    </WithMouseOverState(RadioOption)>
  </Inline>
</div>
`;

exports[`<Group> rendering with \`data-test\` should match snpshot 1`] = `
<div
  data-test="attribute-definition-constraint"
>
  <Inline
    alignItems="flexStart"
    scale="m"
  >
    <WithMouseOverState(RadioOption)
      isChecked={false}
      isDisabled={false}
      key=".0"
      name="bar"
      onChange={[MockFunction]}
      value="foo"
    >
      foo
    </WithMouseOverState(RadioOption)>
    <WithMouseOverState(RadioOption)
      isChecked={false}
      isDisabled={false}
      key=".1"
      name="bar"
      onChange={[MockFunction]}
      value="foo"
    >
      bar
    </WithMouseOverState(RadioOption)>
  </Inline>
</div>
`;
